--- a/svelte-vercel-llm-chat/package.json
+++ b/svelte-vercel-llm-chat/package.json
@@ -1,13 +1,29 @@
 {
-  "name": "svelte-vercel-llm-chat",
-  "version": "1.0.0",
-  "description": "svelte + vercel = llm chat",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.4.1"
+	"name": "svelte-vercel-llm-chat",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@ai-sdk/google": "^1.1.20",
+		"@ai-sdk/svelte": "^1.1.21",
+		"ai": "^4.1.53",
+		"zod": "^3.24.2"
+	}
 }
