--- a/svelte-vercel-llm-chat/package.json
+++ b/svelte-vercel-llm-chat/package.json
@@ -13,7 +13,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.7",
+		"svelte": "^5.22.5",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -23,7 +23,9 @@
 	"dependencies": {
 		"@ai-sdk/google": "^1.1.20",
 		"@ai-sdk/svelte": "^1.1.21",
+		"@tailwindcss/vite": "^4.0.10",
 		"ai": "^4.1.53",
+		"tailwindcss": "^4.0.10",
 		"zod": "^3.24.2"
 	}
 }
